istio/aaa/tls-test/tlsport-redrict/outbound-remove-authority-header.yaml
kind: EnvoyFilter
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: remove-authority-deader-out
  namespace: develop
spec:
  workloadSelector:
    labels:
      app-name: test-service-grid-c
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_OUTBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_FIRST
        value:
          name: envoy.filters.http.lua
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            inlineCode: |
              function envoy_on_request(request_handle)
                request_handle:headers():remove(":authority")             
              end
