istio/aaa/tls-test/tlsport-redrict/test-student-ef-osm2ism.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: student-service-ef-osm2ism
  namespace: istio-test
spec:
  workloadSelector:
    labels:
      app-name: student-service
  configPatches:
    - applyTo: CLUSTER
      match:
        context: SIDECAR_OUTBOUND
      patch:
        operation: ADD
        value: # 下面是新的cluster配置
          name: "my_local_cluster"
          connect_timeout: 0.25s
          type: STATIC
          load_assignment:
            cluster_name: "my_local_cluster"
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 9098
    - applyTo: LISTENER
      match:
        context: SIDECAR_INBOUND
        listener:
          portNumber: 18443
          filterChain:
            transportProtocol: tls
      patch:
        operation: ADD
        value: # 下面是新的listener配置
          name: "listener_0.0.0.0_18443"
          address:
            socket_address:
              address: "0.0.0.0"
              port_value: 18443
    #          filter_chain_match:
    #            transport_protocol: tls
    #            destination_port: 18443
    #          filter_chains:
    #            - filters:
    #                - name: "envoy.http_connection_manager"
    #                  typed_config:
    #                    '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
    #                    stat_prefix: "ingress_http_18443"
    #                    route_config:
    #                      name: "local_route_18443"
    #                      virtual_hosts:
    #                        - name: "local_service_18443"
    #                          domains: ["*"]
    #                          routes:
    #                            - match:
    #                                prefix: "/"
    #                              route:
    #                                cluster: "outbound|9098||student-service.istio-test.svc.cluster.local"
    #                    http_filters:
    #                      - name: "envoy.filters.http.router"
    #                        typed_config:
    #                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    - applyTo: FILTER_CHAIN
      match:
        context: SIDECAR_INBOUND
      patch:
        operation: INSERT_FIRST
        value:
          name: 0.0.0.0_18443
          filter_chain_match:
            transport_protocol: tls
            destination_port: 18443
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: inbound_0.0.0.0_18443
                route_config:
                  name: inbound|18443||
                  virtual_hosts:
                    - name: inbound|https|18443
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: "inbound|9098||"
                          name: default
                  validate_clusters: false
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_params:
                  tls_maximum_protocol_version: TLSv1_3
                  tls_minimum_protocol_version": TLSv1_2
                alpn_protocols:
                  - http/1.0
                  - http/1.1
                  - http/2
                tls_certificate_sds_secret_configs:
                  - name: "default"
                    sds_config:
                      api_config_source:
                        api_type: "GRPC"
                        grpc_services:
                          - envoy_grpc:
                              cluster_name: "sds-grpc"
                        set_node_on_first_message_only: true
                        transport_api_version: "V3"
                      initial_fetch_timeout: "0s"
                      resource_api_version: "V3"
                validation_context_sds_secret_config:
                  name: "ROOTCA"
                  sds_config:
                    api_config_source:
                      api_type: "GRPC"
                      grpc_services:
                        - envoy_grpc:
                            cluster_name: "sds-grpc"
                      set_node_on_first_message_only: true
                      transport_api_version: "V3"
                    initial_fetch_timeout: "0s"
                    resource_api_version: "V3"
              require_client_certificate: true
            # 添加upstreamtlscontext 走http
